# Lightning-Time-Pip-Library

./: setup.cfg
src/LightningTime/: Lightning.py  TimeString.py  __init__.py  main.py
